--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,7 @@
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
     "astro": "^5.13.7",
+    "astro-relative-links": "^0.4.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "tailwindcss": "^4.1.13"
@@ -32,6 +33,7 @@
     "@types/node": "^24.5.2",
     "@typescript-eslint/parser": "^8.43.0",
     "@vitest/coverage-v8": "^3.2.4",
+    "astro-compress": "^2.3.8",
     "astro-eslint-parser": "^1.2.2",
     "eslint": "^9.35.0",
     "eslint-config-prettier": "^10.1.8",
