--- a/app/package.json
+++ b/app/package.json
@@ -12,7 +12,8 @@
     "format": "prettier --write '**/*.{astro,ts,tsx,js,mjs,jsx}' && npm run lint:fix && prettier --write '**/*.{astro,ts,tsx,js,mjs,jsx}'",
     "test": "vitest run --coverage.enabled true",
     "e2e": "npx playwright test",
-    "report": "npx playwright show-report"
+    "report": "npx playwright show-report",
+    "add": "npx shadcn@latest add"
   },
   "dependencies": {
     "@astrojs/react": "^4.3.1",
@@ -21,8 +22,12 @@
     "@types/react-dom": "^19.1.9",
     "astro": "^5.13.7",
     "astro-relative-links": "^0.4.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
@@ -45,6 +50,7 @@
     "happy-dom": "^18.0.1",
     "prettier": "^3.6.2",
     "prettier-plugin-astro": "^0.14.1",
+    "tw-animate-css": "^1.4.0",
     "typescript-eslint": "^8.43.0",
     "vitest": "^3.2.4"
   }
